@@ -1,5 +1,9 @@
 # $Id$
 
+2008-12-18	Vladlen Y. Koshelev
+
+	* core/Form/RegulatedForm.class.php: ruleExists() added.
+
 2008-12-16	Vladlen Y. Koshelev
 
 	* main/Flow/DecoratorController.class.php: controller's decorator added,
